syntax = "proto3";
package protobuf;

import "google/protobuf/timestamp.proto";

option go_package = "./protobuf";

// protoc --go_out=. --go_opt=paths=source_relative ./protobuf/data_raw_varint.proto

message DataRawVarint {
  string Str = 1;
	bool Bool = 2;
	sint32 Int32 = 3;
	double Float64 = 4;
  google.protobuf.Timestamp Time = 5;
}